# seiri

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  main.py  pyproject.toml
.cargo/: config.toml
.docker/: Dockerfile  docker-compose.yml
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  SUPPORT.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: 1-bug.yml  2-feature.yml
.github/workflows/: build.yml  ci.yml  codacy.yml  codeql.yml  release.yml
bench/: bench.rs
config/: languages.json
docs/: interfaces.md
python/src/seiri/core/: graph_builder.py  visualizer.py
python/src/seiri/parsers/: rust.py
python/tests/: __init__.py  test_simple_files.py
python/tests/fixtures/: simple_file_1.py
scripts/: setup.sh
src/: __init__.py  analysis.rs  cli.py  config.rs  core.rs  export.rs  gui.rs  layout.rs  main.rs  parsers.rs
src/core/: defs.rs  graph_builder.py  macros.rs  resolvers.rs  visualizer.py
src/core/resolvers/: cpp.rs  python.rs  rust.rs  typescript.rs
src/gui/: camera.rs
src/layout/: circular.rs  sugiyama.rs
src/parsers/: __init__.py  base.py  cpp.rs  javascript.py  python.py  python.rs  registry.py  rust.py  rust.rs  typescript.rs
src/python/: ast_parser.py  graph_builder.py
src/seiri/: cli.py
src/seiri/core/: __init__.py  graph_builder.py  visualizer.py
src/seiri/parsers/: base.py  javascript.py  python.py
src/seiri/parsers/utils/: __init__.py  datatypes.py  registry.py
tests/: integration.rs  test_self.sh  test_simple_files.py  test_simple_projects.py
tests/examples/project_a/: main.py
tests/examples/project_a/utils/: helpers.py
