[package]
authors = ["tarolling <benitojoens@gmail.com>"]
description = "A tool to visualize and explore the structure of your codebase."
edition = "2024"
homepage = "https://github.com/tarolling/seiri/"
license = "MIT"
name = "seiri-cli"
readme = "README.md"
repository = "https://github.com/tarolling/seiri/"
version = "0.2.4"
rust-version = "1.89"

[dependencies]
clap = { version = "4.5.44", features = ["derive", "cargo"] }
eframe = { version = "0.32.0" }
egui = "0.32.0"
fontdue = "0.9.3"
font-kit = "0.14.3"
ignore = "0.4.23"
once_cell = "1.21.3"
petgraph = "0.8.2"
svg = "0.18.0"
tiny-skia = "0.11"
tree-sitter = "0.25.9"
tree-sitter-typescript = "0.23.2"
tree-sitter-rust = "0.24.0"
tree-sitter-python = "0.25.0"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.22.0"

[profile.dev]
opt-level = 0
debug = true
strip = "none"
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256
rpath = false

[profile.release]
strip = true
lto = "fat"

[profile.test]
opt-level = 0
debug = true
strip = "none"
debug-assertions = true
overflow-checks = true
lto = false
incremental = true
codegen-units = 256
rpath = false
