[package]
authors = ["tarolling"]
description = "A tool to visualize and explore the structure of your codebase."
edition = "2024"
homepage = "https://github.com/tarolling/seiri/"
license = "MIT"
name = "seiri-cli"
readme = "README.md"
repository = "https://github.com/tarolling/seiri/"
version = "0.2.5"

[dependencies]
clap = { version = "4.5.54", features = ["derive", "cargo"] }
eframe = { version = "0.33.3" }
egui = "0.33.3"
fontdue = "0.9.3"
font-kit = "0.14.3"
ignore = "0.4.23"
once_cell = "1.21.3"
petgraph = "0.8.3"
svg = "0.18.0"
tiny-skia = "0.11"
tree-sitter = "0.26.3"
tree-sitter-cpp = "0.23.4"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.0"
tree-sitter-typescript = "0.23.2"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.23.0"

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
