[project]
name = "seiri"
authors = [{ "name" = "tarolling" }]
version = "0.0.1"
description = "A project visualization tool"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.3",
    "networkx[default]>=3.5",
    "pathspec>=0.12.1",
    "pre-commit>=4.2.0",
    "pyqt6>=6.9.1",
    "pytest>=8.4.1",
]

[dependency-groups]
dev = ["ruff>=0.12.3"]
